# mlops-course

./: .env.dev  .pre-commit-config.yaml  Dockerfile  README.md  contributing.md  docker-compose.yml  pyproject.toml  requirements.txt
environments/: environment-dev.yml  environment-prod.yml
src/pipeline/: example.py
